--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html lang="fr">
 		<head>
-			<title>Portfolio de Chris</title>
+			<title>Portfolio | Dazu/Crisx</title>
 			<meta charset="utf-8">
 			<link rel="icon" href="img/website_icon.jpg">
 			<link rel="stylesheet" href="style.css">
