Update + New Page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Portfolio | Dazu/Crisx</title>
     <meta charset="utf-8">
     <link rel="icon" href="img/website_icon.jpg">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index_style.css">
 </head>
 
 <body>
@@ -64,13 +64,14 @@
             </article>
 
             <article>
-                <h2>Gros projets</h2>
+                <h2><a href="bigproject.html">Gros projets</a></h2>
 
                 <ul>
                     <li>Sakunae (TUI) : Logiciel pour apprendre des mots et leurs traductions en d'autres langues par l'intermédiaire de différents modes de quiz</li>
                     <li>VNCreator (TUI) (En utilisant la librairie ncurses) / (GUI) (GTK3) : Logiciel pour créer et jouer des visual novel simplistes</li>
                     <li>Touhou Triple Triad (GUI): Jeu de cartes basé sur le concept de Triple Triad mais en utilisant des personnages de la licence Touhou Project</li>
                 </ul>
+                <p><span class="bold_and_underlined_words">N.B:</span> Pour plus détails, cliquez sur Gros projets.</p>
             </article>
 
         </section>
