--- a/bigproject.html
+++ b/bigproject.html
@@ -24,7 +24,7 @@
 			<article>
 				<h2>Sakunae (咲苗)</h2>
 				<p>Sakunae (咲苗) est un logiciel qui permet d'apprendre des mots et leurs traductions au travers de différents quiz. Il s'agit de mon tout premier projet et aussi un gros projet qui m'a pris plus d'un mois de travail. J'espère qu'il vous plaira ^^.<br>
-				Github: <a href="https://github.com/Crisxzu/sakunae">https://github.com/Crisxzu/sakunae</a></p>
+				Github: <a href="https://github.com/Crisxzu/sakunae" target="_blank">ici</a></p>
 			</article>
 		</section>
 
